mux-compiler/tests/snapshots/lexer_integration__file_lexer__test_module_transitive_import.snap
---
source: mux-compiler/tests/lexer_integration.rs
expression: tokens
---
[
    Token {
        token_type: LineComment(
            "modglobal_e is imported directly; the modules it imports (modglobal_c,",
        ),
        span: Span {
            row_start: 1,
            row_end: Some(
                1,
            ),
            col_start: 1,
            col_end: Some(
                74,
            ),
        },
    },
    Token {
        token_type: NewLine,
        span: Span {
            row_start: 1,
            row_end: None,
            col_start: 74,
            col_end: None,
        },
    },
    Token {
        token_type: LineComment(
            "modglobal_a) are reachable only through it. Those transitive modules must",
        ),
        span: Span {
            row_start: 2,
            row_end: Some(
                2,
            ),
            col_start: 1,
            col_end: Some(
                77,
            ),
        },
    },
    Token {
        token_type: NewLine,
        span: Span {
            row_start: 2,
            row_end: None,
            col_start: 77,
            col_end: None,
        },
    },
    Token {
        token_type: LineComment(
            "still have their globals declared and their init run, in dependency order,",
        ),
        span: Span {
            row_start: 3,
            row_end: Some(
                3,
            ),
            col_start: 1,
            col_end: Some(
                78,
            ),
        },
    },
    Token {
        token_type: NewLine,
        span: Span {
            row_start: 3,
            row_end: None,
            col_start: 78,
            col_end: None,
        },
    },
    Token {
        token_type: LineComment(
            "or reads of their constants resolve to zero (or fail to compile outright).",
        ),
        span: Span {
            row_start: 4,
            row_end: Some(
                4,
            ),
            col_start: 1,
            col_end: Some(
                78,
            ),
        },
    },
    Token {
        token_type: NewLine,
        span: Span {
            row_start: 4,
            row_end: None,
            col_start: 78,
            col_end: None,
        },
    },
    Token {
        token_type: Import,
        span: Span {
            row_start: 5,
            row_end: Some(
                5,
            ),
            col_start: 1,
            col_end: Some(
                7,
            ),
        },
    },
    Token {
        token_type: Id(
            "modglobal_e",
        ),
        span: Span {
            row_start: 5,
            row_end: Some(
                5,
            ),
            col_start: 8,
            col_end: Some(
                19,
            ),
        },
    },
    Token {
        token_type: NewLine,
        span: Span {
            row_start: 5,
            row_end: None,
            col_start: 19,
            col_end: None,
        },
    },
    Token {
        token_type: NewLine,
        span: Span {
            row_start: 6,
            row_end: None,
            col_start: 1,
            col_end: None,
        },
    },
    Token {
        token_type: Func,
        span: Span {
            row_start: 7,
            row_end: Some(
                7,
            ),
            col_start: 1,
            col_end: Some(
                5,
            ),
        },
    },
    Token {
        token_type: Id(
            "main",
        ),
        span: Span {
            row_start: 7,
            row_end: Some(
                7,
            ),
            col_start: 6,
            col_end: Some(
                10,
            ),
        },
    },
    Token {
        token_type: OpenParen,
        span: Span {
            row_start: 7,
            row_end: None,
            col_start: 10,
            col_end: None,
        },
    },
    Token {
        token_type: CloseParen,
        span: Span {
            row_start: 7,
            row_end: None,
            col_start: 11,
            col_end: None,
        },
    },
    Token {
        token_type: Returns,
        span: Span {
            row_start: 7,
            row_end: Some(
                7,
            ),
            col_start: 13,
            col_end: Some(
                20,
            ),
        },
    },
    Token {
        token_type: Id(
            "void",
        ),
        span: Span {
            row_start: 7,
            row_end: Some(
                7,
            ),
            col_start: 21,
            col_end: Some(
                25,
            ),
        },
    },
    Token {
        token_type: OpenBrace,
        span: Span {
            row_start: 7,
            row_end: None,
            col_start: 26,
            col_end: None,
        },
    },
    Token {
        token_type: NewLine,
        span: Span {
            row_start: 7,
            row_end: None,
            col_start: 27,
            col_end: None,
        },
    },
    Token {
        token_type: Id(
            "print",
        ),
        span: Span {
            row_start: 8,
            row_end: Some(
                8,
            ),
            col_start: 5,
            col_end: Some(
                10,
            ),
        },
    },
    Token {
        token_type: OpenParen,
        span: Span {
            row_start: 8,
            row_end: None,
            col_start: 10,
            col_end: None,
        },
    },
    Token {
        token_type: Str(
            "transitive const (want 10):   ",
        ),
        span: Span {
            row_start: 8,
            row_end: Some(
                8,
            ),
            col_start: 11,
            col_end: Some(
                43,
            ),
        },
    },
    Token {
        token_type: Plus,
        span: Span {
            row_start: 8,
            row_end: Some(
                8,
            ),
            col_start: 44,
            col_end: Some(
                45,
            ),
        },
    },
    Token {
        token_type: Id(
            "modglobal_e",
        ),
        span: Span {
            row_start: 8,
            row_end: Some(
                8,
            ),
            col_start: 46,
            col_end: Some(
                57,
            ),
        },
    },
    Token {
        token_type: Dot,
        span: Span {
            row_start: 8,
            row_end: None,
            col_start: 57,
            col_end: None,
        },
    },
    Token {
        token_type: Id(
            "threshold_plus",
        ),
        span: Span {
            row_start: 8,
            row_end: Some(
                8,
            ),
            col_start: 58,
            col_end: Some(
                72,
            ),
        },
    },
    Token {
        token_type: OpenParen,
        span: Span {
            row_start: 8,
            row_end: None,
            col_start: 72,
            col_end: None,
        },
    },
    Token {
        token_type: Int(
            3,
        ),
        span: Span {
            row_start: 8,
            row_end: Some(
                8,
            ),
            col_start: 73,
            col_end: Some(
                74,
            ),
        },
    },
    Token {
        token_type: CloseParen,
        span: Span {
            row_start: 8,
            row_end: None,
            col_start: 74,
            col_end: None,
        },
    },
    Token {
        token_type: Dot,
        span: Span {
            row_start: 8,
            row_end: None,
            col_start: 75,
            col_end: None,
        },
    },
    Token {
        token_type: Id(
            "to_string",
        ),
        span: Span {
            row_start: 8,
            row_end: Some(
                8,
            ),
            col_start: 76,
            col_end: Some(
                85,
            ),
        },
    },
    Token {
        token_type: OpenParen,
        span: Span {
            row_start: 8,
            row_end: None,
            col_start: 85,
            col_end: None,
        },
    },
    Token {
        token_type: CloseParen,
        span: Span {
            row_start: 8,
            row_end: None,
            col_start: 86,
            col_end: None,
        },
    },
    Token {
        token_type: CloseParen,
        span: Span {
            row_start: 8,
            row_end: None,
            col_start: 87,
            col_end: None,
        },
    },
    Token {
        token_type: NewLine,
        span: Span {
            row_start: 8,
            row_end: None,
            col_start: 88,
            col_end: None,
        },
    },
    Token {
        token_type: Id(
            "print",
        ),
        span: Span {
            row_start: 9,
            row_end: Some(
                9,
            ),
            col_start: 5,
            col_end: Some(
                10,
            ),
        },
    },
    Token {
        token_type: OpenParen,
        span: Span {
            row_start: 9,
            row_end: None,
            col_start: 10,
            col_end: None,
        },
    },
    Token {
        token_type: Str(
            "transitive string (want alpha): ",
        ),
        span: Span {
            row_start: 9,
            row_end: Some(
                9,
            ),
            col_start: 11,
            col_end: Some(
                45,
            ),
        },
    },
    Token {
        token_type: Plus,
        span: Span {
            row_start: 9,
            row_end: Some(
                9,
            ),
            col_start: 46,
            col_end: Some(
                47,
            ),
        },
    },
    Token {
        token_type: Id(
            "modglobal_e",
        ),
        span: Span {
            row_start: 9,
            row_end: Some(
                9,
            ),
            col_start: 48,
            col_end: Some(
                59,
            ),
        },
    },
    Token {
        token_type: Dot,
        span: Span {
            row_start: 9,
            row_end: None,
            col_start: 59,
            col_end: None,
        },
    },
    Token {
        token_type: Id(
            "banner",
        ),
        span: Span {
            row_start: 9,
            row_end: Some(
                9,
            ),
            col_start: 60,
            col_end: Some(
                66,
            ),
        },
    },
    Token {
        token_type: OpenParen,
        span: Span {
            row_start: 9,
            row_end: None,
            col_start: 66,
            col_end: None,
        },
    },
    Token {
        token_type: CloseParen,
        span: Span {
            row_start: 9,
            row_end: None,
            col_start: 67,
            col_end: None,
        },
    },
    Token {
        token_type: CloseParen,
        span: Span {
            row_start: 9,
            row_end: None,
            col_start: 68,
            col_end: None,
        },
    },
    Token {
        token_type: NewLine,
        span: Span {
            row_start: 9,
            row_end: None,
            col_start: 69,
            col_end: None,
        },
    },
    Token {
        token_type: Id(
            "print",
        ),
        span: Span {
            row_start: 10,
            row_end: Some(
                10,
            ),
            col_start: 5,
            col_end: Some(
                10,
            ),
        },
    },
    Token {
        token_type: OpenParen,
        span: Span {
            row_start: 10,
            row_end: None,
            col_start: 10,
            col_end: None,
        },
    },
    Token {
        token_type: Str(
            "transitive rename (want 55):  ",
        ),
        span: Span {
            row_start: 10,
            row_end: Some(
                10,
            ),
            col_start: 11,
            col_end: Some(
                43,
            ),
        },
    },
    Token {
        token_type: Plus,
        span: Span {
            row_start: 10,
            row_end: Some(
                10,
            ),
            col_start: 44,
            col_end: Some(
                45,
            ),
        },
    },
    Token {
        token_type: Id(
            "modglobal_e",
        ),
        span: Span {
            row_start: 10,
            row_end: Some(
                10,
            ),
            col_start: 46,
            col_end: Some(
                57,
            ),
        },
    },
    Token {
        token_type: Dot,
        span: Span {
            row_start: 10,
            row_end: None,
            col_start: 57,
            col_end: None,
        },
    },
    Token {
        token_type: Id(
            "capped",
        ),
        span: Span {
            row_start: 10,
            row_end: Some(
                10,
            ),
            col_start: 58,
            col_end: Some(
                64,
            ),
        },
    },
    Token {
        token_type: OpenParen,
        span: Span {
            row_start: 10,
            row_end: None,
            col_start: 64,
            col_end: None,
        },
    },
    Token {
        token_type: CloseParen,
        span: Span {
            row_start: 10,
            row_end: None,
            col_start: 65,
            col_end: None,
        },
    },
    Token {
        token_type: Dot,
        span: Span {
            row_start: 10,
            row_end: None,
            col_start: 66,
            col_end: None,
        },
    },
    Token {
        token_type: Id(
            "to_string",
        ),
        span: Span {
            row_start: 10,
            row_end: Some(
                10,
            ),
            col_start: 67,
            col_end: Some(
                76,
            ),
        },
    },
    Token {
        token_type: OpenParen,
        span: Span {
            row_start: 10,
            row_end: None,
            col_start: 76,
            col_end: None,
        },
    },
    Token {
        token_type: CloseParen,
        span: Span {
            row_start: 10,
            row_end: None,
            col_start: 77,
            col_end: None,
        },
    },
    Token {
        token_type: CloseParen,
        span: Span {
            row_start: 10,
            row_end: None,
            col_start: 78,
            col_end: None,
        },
    },
    Token {
        token_type: NewLine,
        span: Span {
            row_start: 10,
            row_end: None,
            col_start: 79,
            col_end: None,
        },
    },
    Token {
        token_type: Return,
        span: Span {
            row_start: 11,
            row_end: Some(
                11,
            ),
            col_start: 5,
            col_end: Some(
                11,
            ),
        },
    },
    Token {
        token_type: NewLine,
        span: Span {
            row_start: 11,
            row_end: None,
            col_start: 11,
            col_end: None,
        },
    },
    Token {
        token_type: CloseBrace,
        span: Span {
            row_start: 12,
            row_end: None,
            col_start: 1,
            col_end: None,
        },
    },
    Token {
        token_type: NewLine,
        span: Span {
            row_start: 12,
            row_end: None,
            col_start: 2,
            col_end: None,
        },
    },
]
