mux-compiler/tests/snapshots/lexer_integration__file_lexer__test_nested_field.snap
---
source: mux-compiler/tests/lexer_integration.rs
expression: tokens
---
[
    Token {
        token_type: Class,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "Inner",
        ),
        span: Span { .. },
    },
    Token {
        token_type: OpenBrace,
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "int",
        ),
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "x",
        ),
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: CloseBrace,
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: Class,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "Outer",
        ),
        span: Span { .. },
    },
    Token {
        token_type: OpenBrace,
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "Inner",
        ),
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "inner",
        ),
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: CloseBrace,
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: Func,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "main",
        ),
        span: Span { .. },
    },
    Token {
        token_type: OpenParen,
        span: Span { .. },
    },
    Token {
        token_type: CloseParen,
        span: Span { .. },
    },
    Token {
        token_type: Returns,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "void",
        ),
        span: Span { .. },
    },
    Token {
        token_type: OpenBrace,
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: Auto,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "i",
        ),
        span: Span { .. },
    },
    Token {
        token_type: Eq,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "Inner",
        ),
        span: Span { .. },
    },
    Token {
        token_type: Dot,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "new",
        ),
        span: Span { .. },
    },
    Token {
        token_type: OpenParen,
        span: Span { .. },
    },
    Token {
        token_type: CloseParen,
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "i",
        ),
        span: Span { .. },
    },
    Token {
        token_type: Dot,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "x",
        ),
        span: Span { .. },
    },
    Token {
        token_type: Eq,
        span: Span { .. },
    },
    Token {
        token_type: Int(
            42,
        ),
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: Auto,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "o",
        ),
        span: Span { .. },
    },
    Token {
        token_type: Eq,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "Outer",
        ),
        span: Span { .. },
    },
    Token {
        token_type: Dot,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "new",
        ),
        span: Span { .. },
    },
    Token {
        token_type: OpenParen,
        span: Span { .. },
    },
    Token {
        token_type: CloseParen,
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "o",
        ),
        span: Span { .. },
    },
    Token {
        token_type: Dot,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "inner",
        ),
        span: Span { .. },
    },
    Token {
        token_type: Eq,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "i",
        ),
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: LineComment(
            "Test reading nested field",
        ),
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "print",
        ),
        span: Span { .. },
    },
    Token {
        token_type: OpenParen,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "o",
        ),
        span: Span { .. },
    },
    Token {
        token_type: Dot,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "inner",
        ),
        span: Span { .. },
    },
    Token {
        token_type: Dot,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "x",
        ),
        span: Span { .. },
    },
    Token {
        token_type: Dot,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "to_string",
        ),
        span: Span { .. },
    },
    Token {
        token_type: OpenParen,
        span: Span { .. },
    },
    Token {
        token_type: CloseParen,
        span: Span { .. },
    },
    Token {
        token_type: CloseParen,
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: LineComment(
            "Test assignment to nested field",
        ),
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "o",
        ),
        span: Span { .. },
    },
    Token {
        token_type: Dot,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "inner",
        ),
        span: Span { .. },
    },
    Token {
        token_type: Dot,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "x",
        ),
        span: Span { .. },
    },
    Token {
        token_type: Eq,
        span: Span { .. },
    },
    Token {
        token_type: Int(
            100,
        ),
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "print",
        ),
        span: Span { .. },
    },
    Token {
        token_type: OpenParen,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "o",
        ),
        span: Span { .. },
    },
    Token {
        token_type: Dot,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "inner",
        ),
        span: Span { .. },
    },
    Token {
        token_type: Dot,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "x",
        ),
        span: Span { .. },
    },
    Token {
        token_type: Dot,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "to_string",
        ),
        span: Span { .. },
    },
    Token {
        token_type: OpenParen,
        span: Span { .. },
    },
    Token {
        token_type: CloseParen,
        span: Span { .. },
    },
    Token {
        token_type: CloseParen,
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: LineComment(
            "Test multiple levels",
        ),
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: Auto,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "o2",
        ),
        span: Span { .. },
    },
    Token {
        token_type: Eq,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "o",
        ),
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "o2",
        ),
        span: Span { .. },
    },
    Token {
        token_type: Dot,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "inner",
        ),
        span: Span { .. },
    },
    Token {
        token_type: Dot,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "x",
        ),
        span: Span { .. },
    },
    Token {
        token_type: Eq,
        span: Span { .. },
    },
    Token {
        token_type: Int(
            200,
        ),
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "print",
        ),
        span: Span { .. },
    },
    Token {
        token_type: OpenParen,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "o2",
        ),
        span: Span { .. },
    },
    Token {
        token_type: Dot,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "inner",
        ),
        span: Span { .. },
    },
    Token {
        token_type: Dot,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "x",
        ),
        span: Span { .. },
    },
    Token {
        token_type: Dot,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "to_string",
        ),
        span: Span { .. },
    },
    Token {
        token_type: OpenParen,
        span: Span { .. },
    },
    Token {
        token_type: CloseParen,
        span: Span { .. },
    },
    Token {
        token_type: CloseParen,
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: Return,
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: CloseBrace,
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
]
